solved problem 217 on sept of 3rd 2025

--- a/problem 3100 water bottles II .ipynb
+++ b/problem 3100 water bottles II .ipynb
@@ -47,13 +47,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "4583bf4c",
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "def maxBottlesDrunk(self, numBottles: int, numExchange: int) -> int:\n",
+    "def maxBottlesDrunk( numBottles: int, numExchange: int) -> int:\n",
     "    ans = numBottles \n",
     "    while numBottles >= numExchange :\n",
     "        numBottles -= numExchange - 1\n",
