--- a/sample.ipynb
+++ b/sample.ipynb
@@ -53,22 +53,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "c4e984e4",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mIndexError\u001b[39m                                Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[32m      3\u001b[39m nums2 = [\u001b[32m2\u001b[39m,\u001b[32m5\u001b[39m,\u001b[32m6\u001b[39m]\n\u001b[32m      4\u001b[39m n = \u001b[32m3\u001b[39m \n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mnums1\u001b[49m\u001b[43m[\u001b[49m\u001b[32;43m6\u001b[39;49m\u001b[43m]\u001b[49m > \u001b[32m0\u001b[39m :\n\u001b[32m      7\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
-      "\u001b[31mIndexError\u001b[39m: list index out of range"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "nums1=[1,2,3,0,0,0] \n",
     "m = 3  \n",
@@ -83,6 +71,255 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4ae1acc9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 : 0b1\n",
+      "2 : 0b10\n",
+      "3 : 0b11\n",
+      "4 : 0b100\n",
+      "5 : 0b101\n",
+      "6 : 0b110\n",
+      "7 : 0b111\n",
+      "8 : 0b1000\n",
+      "9 : 0b1001\n",
+      "10 : 0b1010\n",
+      "11 : 0b1011\n",
+      "12 : 0b1100\n",
+      "13 : 0b1101\n",
+      "14 : 0b1110\n",
+      "15 : 0b1111\n",
+      "16 : 0b10000\n",
+      "17 : 0b10001\n",
+      "18 : 0b10010\n",
+      "19 : 0b10011\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1,20):\n",
+    "    print( i ,\":\" ,bin(i))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "fd7a44f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "5 << 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "bd18dd6b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('0b100000', 32)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bin(32) , 1 << 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "cae8541e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "32 >> 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "9a11291f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n=[0,1,0,1,0,1,99]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "93e1581b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def le(l):\n",
+    "    freq = {}\n",
+    "    min = None\n",
+    "    for i in n :\n",
+    "        if i in freq :\n",
+    "            freq[i] +=1\n",
+    "        else :\n",
+    "            freq[i] = 1\n",
+    "    for i in freq :\n",
+    "        min = freq[i]\n",
+    "        if freq[i]< freq[i+1]:\n",
+    "            min = freq[i]\n",
+    "    return min\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "c2fcf966",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "99\n"
+     ]
+    }
+   ],
+   "source": [
+    "nums = [0,1,0,1,0,1,99]\n",
+    "for i , num in enumerate(nums) :\n",
+    "    if num not in nums[0:i-1 ] and num not in nums[i+1::]:\n",
+    "        print(num)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "5b77f1b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "3\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in freq :\n",
+    "    print(freq[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "82e6651f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[3, 0, 1, 3, 1, 2], [1, 2, 3, 1, 2, 0], [2, 1, 1, 2, 1, 3]]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "water = [[1,4,3,1,3,2],[3,2,1,3,2,4],[2,3,3,2,3,1]]\n",
+    "samp = []\n",
+    "up = []\n",
+    "for i in water :\n",
+    "    samp = []\n",
+    "    for j in i :\n",
+    "        samp = samp + [4-j]\n",
+    "    up.append(samp)\n",
+    "    \n",
+    "up \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "fdbe2f53",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "up = []\n",
+    "samp = [0,1,2]\n",
+    "up.append(samp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "f44a9d66",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "up.append(samp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "3fed4f80",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0, 1, 2], [0, 1, 2]]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "up "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f65b1c59",
    "metadata": {},
    "outputs": [],
    "source": []
