problem 2001 solved on sept 4th 2025

--- a/sample.ipynb
+++ b/sample.ipynb
@@ -318,8 +318,246 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "f65b1c59",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 <__main__.ListNode object at 0x0000024A67516930>\n"
+     ]
+    }
+   ],
+   "source": [
+    "class ListNode:\n",
+    "    def __init__(self, val=0, next=None):\n",
+    "        self.val = val\n",
+    "        self.next = next\n",
+    "\n",
+    "node  = ListNode(val= 1)\n",
+    "node1 = ListNode(val=2)\n",
+    "node2 = ListNode(val=3)\n",
+    "node3 = ListNode(val=4)\n",
+    "\n",
+    "node.next = node1\n",
+    "node1.next = node2\n",
+    "node2.next = node3\n",
+    "\n",
+    "print(node.val , node.next)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8183605b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def build_linked_list(values):\n",
+    "    dummy = ListNode()   # temporary starter node\n",
+    "    current = dummy\n",
+    "    for v in values:\n",
+    "        current.next = ListNode(v)\n",
+    "        current = current.next\n",
+    "    return dummy.next  \n",
+    "  # return the real head    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "ee33ba16",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.ListNode at 0x24a675178f0>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dummy = ListNode()\n",
+    "# dummy.val , dummy.next\n",
+    "current = dummy\n",
+    "# for v in [1,2,3]:\n",
+    "#     current.next = ListNode(v)\n",
+    "#     current = current.next\n",
+    "current.next = ListNode(1)\n",
+    "current = current.next\n",
+    "current"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "8345ed77",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<__main__.ListNode object at 0x0000024A67548CE0> 0 None\n",
+      "<__main__.ListNode object at 0x0000024A67548CE0> 0 <__main__.ListNode object at 0x0000024A67516C30>\n",
+      "<__main__.ListNode object at 0x0000024A67516C30> 1 None\n"
+     ]
+    }
+   ],
+   "source": [
+    "dummy = ListNode()                             \n",
+    "current = dummy\n",
+    "print(current , current.val , current.next)\n",
+    "current.next = ListNode(1)\n",
+    "print(current , current.val , current.next)\n",
+    "current = current.next\n",
+    "print(current , current.val , current.next)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "7322d6b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def build_linked_list(values):\n",
+    "    dummy = ListNode()   # temporary starter node\n",
+    "    current = dummy\n",
+    "    for v in values:\n",
+    "        current.next = ListNode(v)\n",
+    "        current = current.next\n",
+    "    return dummy.next  \n",
+    "  # return the real head   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "d30159ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "di = {0:1 , 1: 2}\n",
+    "num = 0\n",
+    "for sum in di :\n",
+    "    if di[sum] > 1 :\n",
+    "        num += di[sum]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "5451cbc0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num = 0 \n",
+    "d =  {0.5:2 , 0: 2} \n",
+    "for s in d:\n",
+    "    if d[s] >1 :\n",
+    "        for i in range(0, d[s]):\n",
+    "            num += 1*i\n",
+    "        \n",
+    "num"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "0db63571",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rectangles = [[4,8],[3,6],[10,20],[15,30]]\n",
+    "in_ch = 0\n",
+    "ratios ={}\n",
+    "for ratio in rectangles:\n",
+    "    r = ratio[0]/ratio[1]\n",
+    "    # ratios[r] = ratios[r] + 1 if r in ratios else 1\n",
+    "    if r in ratios :\n",
+    "        ratios[r] += 1\n",
+    "    else :\n",
+    "        ratios[r] = 1\n",
+    "num = max(ratios.values())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "4f0f1d66",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "fcefe05c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "rectangles =[[4,2],[1,3],[4,1],[4,2],[2,4],[1,1],[1,1]]\n",
+    "in_ch = 0\n",
+    "ratios ={}\n",
+    "for ratio in rectangles:\n",
+    "    r = ratio[0]/ratio[1]\n",
+    "    # ratios[r] = ratios[r] + 1 if r in ratios else 1\n",
+    "    if r in ratios :\n",
+    "        ratios[r] += 1\n",
+    "    else :\n",
+    "        ratios[r] = 1\n",
+    "num =0\n",
+    "for s in ratios :\n",
+    "    if ratios[s] >1 :\n",
+    "        for i in range(0, ratios[s]):\n",
+    "            num += 1*i\n",
+    "        in_ch += num\n",
+    "print(in_ch)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a723071",
    "metadata": {},
    "outputs": [],
    "source": []
