solved problem on oct 7th 2025

--- a/sample.ipynb
+++ b/sample.ipynb
@@ -584,8 +584,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "661d3803",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = [0 ,1]\n",
+    "ind = 1\n",
+    "def land(num , ind):\n",
+    "    try :\n",
+    "        \n",
+    "        if num[ind] == num[-1]:\n",
+    "            if num[ind] > num[0]:\n",
+    "                return True\n",
+    "        elif num[ind] > num[ind+1]:\n",
+    "            return False\n",
+    "    except :\n",
+    "        return 0\n",
+    "print(land(num , ind))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "111c5bc3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "from typing import List\n",
+    "def check( nums: List[int]) -> bool:\n",
+    "    n = 0 \n",
+    "    is_sorted = all(nums[i] <= nums[i + 1] for i in range(len(nums) - 1))\n",
+    "    for i in range(len(nums)-1):\n",
+    "        if nums[i] > nums[i+1]:\n",
+    "            n +=1 \n",
+    "    return n == 1 or is_sorted\n",
+    "print(check(nums=[5 ,4 ,1]))\n",
+    "                "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "d7e67774",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nums = [3,4,5,1,2]\n",
+    "if sorted(nums) == True:\n",
+    "    print(True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f225aea",
    "metadata": {},
    "outputs": [],
    "source": []
