solved problem 704 on 8th of oct 2025 even, when i don't want to do anything

--- a/sample.ipynb
+++ b/sample.ipynb
@@ -654,7 +654,89 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3d6f64ac",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "6f225aea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List\n",
+    "class Solution:\n",
+    "    def search(self, nums: List[int], target: int) -> int:\n",
+    "        mid = len(nums)//2\n",
+    "        for i in range(mid):\n",
+    "            if nums[mid] < target :\n",
+    "                mid +=1\n",
+    "            elif nums[mid] > target:\n",
+    "                mid -=1\n",
+    "        if nums[mid] == target :\n",
+    "            return mid\n",
+    "        return -1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "c50bd186",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = Solution()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "6cda106c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.search([-1,0,3,5,9,12] , -1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "9087a195",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mid =  6\n",
+    "mid//2 if mid % 2 == 0 else mid //2 +1 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8202d05f",
    "metadata": {},
    "outputs": [],
    "source": []
